// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders correctly 1`] = `
<DocumentFragment>
  .cache-yvd9fu-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-yvd9fu-RadioContainer[aria-disabled='false'],
.cache-yvd9fu-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true'] .ehkrmld2 {
  fill: #b5b7bd;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #e9eaeb;
}

.cache-153jgd8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-153jgd8-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-153jgd8-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-153jgd8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #ac2740;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-w9n3gd-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #6d717c;
}

.cache-w9n3gd-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-v3nsk0-InnerCircleRing {
  fill: #f9f9fa;
}

<div
    aria-disabled="false"
    class="cache-yvd9fu-RadioContainer ehkrmld0"
    data-checked="false"
  >
    <input
      aria-disabled="false"
      aria-invalid="false"
      class="cache-153jgd8-RadioInput ehkrmld1"
      id="radio-choice"
      name="radio"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-w9n3gd-StyledIcon ehkrmld2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="cache-v3nsk0-InnerCircleRing ehkrmld4"
          cx="12"
          cy="12"
          r="6"
        />
        <circle
          class="cache-ivayk3-RadioMark ehkrmld3"
          cx="12"
          cy="12"
          r="4"
        />
      </g>
    </svg>
    <label
      for="radio-choice"
    >
      Choice
    </label>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-yvd9fu-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-yvd9fu-RadioContainer[aria-disabled='false'],
.cache-yvd9fu-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true'] .ehkrmld2 {
  fill: #b5b7bd;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #e9eaeb;
}

.cache-153jgd8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-153jgd8-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-153jgd8-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-153jgd8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #ac2740;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-w9n3gd-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #6d717c;
}

.cache-w9n3gd-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-v3nsk0-InnerCircleRing {
  fill: #f9f9fa;
}

<div
    aria-disabled="false"
    class="cache-yvd9fu-RadioContainer ehkrmld0"
    data-checked="true"
  >
    <input
      aria-disabled="false"
      aria-invalid="false"
      checked=""
      class="cache-153jgd8-RadioInput ehkrmld1"
      id="radio-choice"
      name="radio"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-w9n3gd-StyledIcon ehkrmld2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="cache-v3nsk0-InnerCircleRing ehkrmld4"
          cx="12"
          cy="12"
          r="6"
        />
        <circle
          class="cache-ivayk3-RadioMark ehkrmld3"
          cx="12"
          cy="12"
          r="4"
        />
      </g>
    </svg>
    <label
      for="radio-choice"
    >
      Choice
    </label>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-yvd9fu-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-yvd9fu-RadioContainer[aria-disabled='false'],
.cache-yvd9fu-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true'] .ehkrmld2 {
  fill: #b5b7bd;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #e9eaeb;
}

.cache-153jgd8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-153jgd8-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-153jgd8-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-153jgd8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #ac2740;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-w9n3gd-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #6d717c;
}

.cache-w9n3gd-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-v3nsk0-InnerCircleRing {
  fill: #f9f9fa;
}

<div
    aria-disabled="true"
    class="cache-yvd9fu-RadioContainer ehkrmld0"
    data-checked="false"
  >
    <input
      aria-disabled="true"
      aria-invalid="false"
      class="cache-153jgd8-RadioInput ehkrmld1"
      disabled=""
      id="radio-choice"
      name="radio"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-w9n3gd-StyledIcon ehkrmld2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="cache-v3nsk0-InnerCircleRing ehkrmld4"
          cx="12"
          cy="12"
          r="6"
        />
        <circle
          class="cache-ivayk3-RadioMark ehkrmld3"
          cx="12"
          cy="12"
          r="4"
        />
      </g>
    </svg>
    <label
      for="radio-choice"
    >
      Choice
    </label>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when error 1`] = `
<DocumentFragment>
  .cache-yvd9fu-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-yvd9fu-RadioContainer[aria-disabled='false'],
.cache-yvd9fu-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true'] .ehkrmld2 {
  fill: #b5b7bd;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #e9eaeb;
}

.cache-153jgd8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-153jgd8-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-153jgd8-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-153jgd8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #ac2740;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-w9n3gd-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #6d717c;
}

.cache-w9n3gd-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-v3nsk0-InnerCircleRing {
  fill: #f9f9fa;
}

<div
    aria-disabled="false"
    class="cache-yvd9fu-RadioContainer ehkrmld0"
    data-checked="false"
    data-error="Invalid value"
  >
    <input
      aria-disabled="false"
      aria-invalid="true"
      class="cache-153jgd8-RadioInput ehkrmld1"
      id="radio-choice"
      name="radio"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-w9n3gd-StyledIcon ehkrmld2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="cache-v3nsk0-InnerCircleRing ehkrmld4"
          cx="12"
          cy="12"
          r="6"
        />
        <circle
          class="cache-ivayk3-RadioMark ehkrmld3"
          cx="12"
          cy="12"
          r="4"
        />
      </g>
    </svg>
    <label
      for="radio-choice"
    >
      Choice
    </label>
  </div>
</DocumentFragment>
`;

exports[`Radio renders without name 1`] = `
<DocumentFragment>
  .cache-yvd9fu-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-yvd9fu-RadioContainer[aria-disabled='false'],
.cache-yvd9fu-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-yvd9fu-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true'] .ehkrmld2 {
  fill: #b5b7bd;
}

.cache-yvd9fu-RadioContainer[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #e9eaeb;
}

.cache-153jgd8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-153jgd8-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-153jgd8-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-153jgd8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #ac2740;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-153jgd8-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-153jgd8-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-w9n3gd-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #6d717c;
}

.cache-w9n3gd-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-v3nsk0-InnerCircleRing {
  fill: #f9f9fa;
}

<div
    aria-disabled="true"
    class="cache-yvd9fu-RadioContainer ehkrmld0"
    data-checked="false"
  >
    <input
      aria-disabled="true"
      aria-invalid="false"
      class="cache-153jgd8-RadioInput ehkrmld1"
      disabled=""
      id=":r2:-choice"
      name=":r2:"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-w9n3gd-StyledIcon ehkrmld2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="cache-v3nsk0-InnerCircleRing ehkrmld4"
          cx="12"
          cy="12"
          r="6"
        />
        <circle
          class="cache-ivayk3-RadioMark ehkrmld3"
          cx="12"
          cy="12"
          r="4"
        />
      </g>
    </svg>
    <label
      for=":r2:-choice"
    >
      Choice
    </label>
  </div>
</DocumentFragment>
`;
